--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
             <span>Enjoy on your TV</span>
             <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more. </span>
         </div>
-        <div class="imgd"> <img src="assets/images/tv.png" alt="tv" width="100%" height="auto">
-            <video src="/assets/videos/video-tv-in-0819.m4v" width="350px" height="200px" loop muted playsinline autoplay type="video/mp4"></video>
+        <div class="imgd"> <img src="tv.png" alt="tv" width="100%" height="auto">
+            <video src="video-tv-in-0819.m4v" width="350px" height="200px" loop muted playsinline autoplay type="video/mp4"></video>
         </div>
         </div>
     </section>
     <div class="separate1"></div>
     <section class="sec2">
-        <div class="imgd2"> <img src="assets/images/mobilepic.jpg" alt="mp" width="460px" height="360px">
+        <div class="imgd2"> <img src="mobilepic.jpg" alt="mp" width="460px" height="360px">
             <div class="plane">
-                <img src="assets/images/boxshot.png" alt="op">
+                <img src="boxshot.png" alt="op">
                 <div class="align">
                     <span>Stranger Things</span>
                     <span>Downloading...</Downloading></span>
                 </div>
-                <img src="assets/images/download-icon.gif" alt="gif">
+                <img src="download-icon.gif" alt="gif">
             </div>
         </div>
         <div class="cont2">
@@ -65,14 +65,14 @@
             <span>Watch everywhere</span>
             <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV. </span>
         </div>
-        <div class="imgd3"> <img src="assets/images/device-pile-in.png" alt="tv" width="460px" height="340px">
-            <video src="/assets/videos/video-devices-in.m4v" width="200px" height="100px" loop muted playsinline autoplay type="video/mp4"></video>
+        <div class="imgd3"> <img src="device-pile-in.png" alt="tv" width="460px" height="340px">
+            <video src="video-devices-in.m4v" width="200px" height="100px" loop muted playsinline autoplay type="video/mp4"></video>
         </div>
         </div>
     </section>
     <div class="separate1"></div>
     <section class="sec4">
-        <div class="imgd4"> <img src="assets/images/img1.png" alt="mp" width="460px" height="350px">
+        <div class="imgd4"> <img src="img1.png" alt="mp" width="460px" height="350px">
         </div>
         <div class="cont4">
             <span>Create profiles for kids</span>
